chore:  Product Content (#228)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,5 @@
-src/content/docs @aziontech/product-content @aziontech/product-management @aziontech/cs-support @aziontech/cs-labs
-src/i18n/**/*.ts @aziontech/product-content @aziontech/product-management @aziontech/cs-support @aziontech/cs-labs
+src/content/docs @aziontech/product-content
+src/i18n/**/*.ts @aziontech/product-content
 
 src/components @aziontech/experience-engineering
 src/data @aziontech/experience-engineering
